devtools/client/themes/tooltips.css
/* ... */
:root[platform="mac"].theme-light {
  --theme-arrowpanel-separator: hsla(210, 4%, 10%, 0.14);
}

/*
  There's a specific color-scheme defined for panels in https://searchfox.org/mozilla-central/rev/02841791400cf7cf5760c0cfaf31f5d772624253/toolkit/themes/shared/popup.css#9-13
  This could create issues when the Firefox theme is at odd with the DevTools one (e.g.
  if Firefox uses a dark theme but the user has a DevTools light theme.
  Unset the color-scheme on those element so it uses the one we set on :root in common.css,
  which matches our light/dark theme.
*/
menupopup,
panel {
  color-scheme: unset;
}

strong {
  font-weight: bold;
}

/* Tooltip: CSS variables tooltip */

.tooltip-container:has(.devtools-tooltip-css-variable) {
  /* By default, in dark mode, the tooltip background color is lighter than the background
     color of the Rules view. Since we're using the same color than in the Rules view
     for CSS values, this can lead to poor contrast.
     To prevent this, we apply the same background color than in the Rules view */
  --theme-tooltip-background: var(--theme-body-background);
}

.devtools-tooltip-css-variable {
  --block-padding: 8px;
  color: var(--theme-body-color);
  padding: var(--block-padding) 8px;
  direction: ltr;
  overflow-wrap: break-word;
  /* Try to show the content of the tooltip on a single line */
  inline-size: max-content;
  min-inline-size: 60px;
  max-inline-size: min(500px, 100vw);

  /* If only the "top" section is displayed, to avoid smaller text (e.g. `10px`) to look unbalanced */
  .variable-value:not(:has(+ .variable-tooltip-section)) {
    text-align: center;
  }
  /* If there are other sections, add some space below the value */
  .variable-value:has(+ .variable-tooltip-section) {
    padding-block-end: var(--block-padding);
  }

  .variable-tooltip-section {
    border-block-start: 1px solid var(--theme-splitter-color);
    margin: 0;
    padding-block: var(--block-padding);

    h2 {
      margin-block: 0;
      padding-block-start: 0;
      padding-block-end: var(--block-padding);
    }

    dl {
      padding: 0;
      margin: 0;
    }

    dt,
    dd {
      display: inline;
    }

    dt {
      color: var(--theme-highlight-blue);
      padding-inline-end: 4px;
    }

    dd {
      color: var(--theme-highlight-red);
      margin: 0;
      padding: 0;
    }
  }
}

/* Tooltip: Compatibility tooltip */

.devtools-tooltip-css-compatibility {
  color: var(--theme-body-color);
  padding: 2px;
  direction: ltr;
}

/* Tooltip: JS Evaluation Context */

#webconsole-input-evaluationsButton > .tooltip-panel {
  /* helps the JS Context selector to have scrollbars when content exceed the vertical size of the popup */
  overflow-y: auto;
}

/* Tooltip: Inactive CSS tooltip */

.devtools-tooltip-inactive-css,
.devtools-tooltip-css-compatibility {
  color: var(--theme-arrowpanel-color);
  margin: 0;
  padding: 10px 14px 12px 14px;
  font-size: 12px;
}

.devtools-tooltip-inactive-css,
.devtools-tooltip-css-compatibility,
.devtools-tooltip-inactive-css strong,
.devtools-tooltip-css-compatibility strong {
  user-select: text;
  -moz-user-focus: normal;
}

.devtools-tooltip-inactive-css p,
.devtools-tooltip-css-compatibility p {
  margin-block-start: 0;
  margin-block-end: calc(1em - 4px);
}

.devtools-tooltip-inactive-css p:last-child,
.devtools-tooltip-css-compatibility p:last-child {
  margin-block-end: 0;
}

:is(.devtools-tooltip-inactive-css, .devtools-tooltip-css-compatibility) .link {
  color: var(--theme-link-color);
  cursor: pointer;
  text-decoration: 1px underline;
}

/* Tooltip: Compatibility tooltip */

.tooltip-container[type="doorhanger"] .tooltip-panel ul.compatibility-unsupported-browser-list {
  width: 100%;
  padding: 0;
  display: flex;
  justify-content: start;
}

/* Tooltip: query container info */
.devtools-tooltip-query-container {
  color: var(--theme-body-color);
  margin: 0;
  padding: 10px 14px 12px;
  font-size: 12px;
  user-select: text;
  -moz-user-focus: normal;
}

.devtools-tooltip-query-container header {
  --block-end-space: 5px;
  border-block-end: 1px solid var(--theme-popup-dimmed);
  padding-block-end: var(--block-end-space);
  margin-block-end: var(--block-end-space);
  max-width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  color: var(--theme-body-color);
}

.devtools-tooltip-query-container ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.devtools-tooltip-query-container .objectBox-node .tag-name {
  color: var(--theme-highlight-blue);
}

.devtools-tooltip-query-container .objectBox-node .attribute-name {
  color: var(--theme-highlight-red);
}

.devtools-tooltip-query-container .property-name {
  color: var(--theme-highlight-blue);
}

.devtools-tooltip-query-container .property-value {
  color: var(--theme-highlight-red);
}

/* Tooltip: Tiles */

.devtools-tooltip-tiles {
  background-color: #eee;
  background-image:
    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
  background-size: 20px 20px;
  background-position:
    0 0,
    10px 10px;
}

.tooltip-container {
  display: none;
  position: fixed;
  z-index: 9999;
  background: transparent;
  pointer-events: none;
  overflow: clip;
  filter: drop-shadow(0 2px 8px var(--theme-tooltip-shadow-color));
}
/* ... */

