Bug 2033782 - [devtools] Fix container query tooltip contrast in dark mode. r=devtools-reviewers,bomsy.
Differential Revision: https://phabricator.services.mozilla.com/D295747

UltraBlame original commit: 089f0fba691738aae433c60c134419a72bd41780

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -229,6 +229,14 @@ strong {
 }
 
 /* Tooltip: query container info */
+.tooltip-container:has(.devtools-tooltip-query-container) {
+  /* By default, in dark mode, the tooltip background color is lighter than the background
+     color of the Rules view. Since we're using the same color than in the Rules view
+     for CSS values, this can lead to poor contrast.
+     To prevent this, we apply the same background color than in the Rules view */
+  --theme-arrowpanel-background: var(--theme-body-background);
+}
+
 .devtools-tooltip-query-container {
   color: var(--theme-body-color);
   margin: 0;
@@ -255,6 +263,12 @@ strong {
   list-style: none;
 }
 
+.devtools-tooltip-query-container ul.unset-properties {
+  margin-block-start: 1em;
+  padding-block-start: 1em;
+  border-block-start: 1px solid var(--theme-popup-dimmed);
+}
+
 .devtools-tooltip-query-container .objectBox-node .tag-name {
   color: var(--theme-highlight-blue);
 }
@@ -269,6 +283,10 @@ strong {
 
 .devtools-tooltip-query-container .property-value {
   color: var(--theme-highlight-red);
+
+  &.empty {
+    color: var(--theme-text-color-inactive);
+  }
 }
 
 /* Tooltip: Tiles */
